# tianjy_tree_table_multiselect

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
tianjy_tree_table_multiselect/: __init__.py  hooks.py  modules.txt
tianjy_tree_table_multiselect/config/: desktop.py  docs.py
tianjy_tree_table_multiselect/migrate/: __init__.py
tianjy_tree_table_multiselect/patches/: new_types.py
tianjy_tree_table_multiselect/public/css/: tree_table_multiselect.css
tianjy_tree_table_multiselect/public/js/: controls.js  create.js  filter.js  formatters.js  tianjy_tree_table_multiselect.bundle.js
tianjy_tree_table_multiselect/tianjy_tree_table_multiselect/: tianjy_tree_table_multiselect.py
tianjy_tree_table_multiselect/translations/: zh.csv
