[project]
name = "tianjy_tree_table_multiselect"
authors = [
    { name = "天玑 Tianjy", email = "a@a.com"}
]
description = "天玑树结构表多选字段 Tianjy Tree Table Multiselect"
requires-python = ">=3.10"
readme = "README.md"
version = "0.0.1"
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
